--- a/About.html
+++ b/About.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>About</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css\about.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
@@ -26,7 +26,7 @@
         <a class="nav-link" href="projects.html">Projects <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="https://github.com/Bro123456">Github <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="https://github.com/Amine-Zitoun">Github <span class="sr-only">(current)</span></a>
       </li>
 
     </ul>
