change some things

--- a/About.html
+++ b/About.html
@@ -55,10 +55,10 @@
   but I didn't give up and I had to learn all what I need from advanced Statistics and Porbability ,Calculus all the good stuff, and then I got to the fun part (Coding)<br>
 
   First Couple of Months Were Pretty Hard But As always I didn't give up and I continued Learning and started participating in Data Sciense competetions
-  and Using Random Datasets on the interent to do EDA on them and Currently after a lot of hard work (and pain ) I am sitting at the rank of 83 out of 2706 in a DataSciense Comeptetion Hosted by <a  style="color: yellow;" href="https://www.drivendata.org/competitions/54/machine-learning-with-a-heart/">DrivenData</a>
+  and Using Random Datasets on the interent to do EDA on them and Currently after a lot of hard work (and pain ) I am sitting at the rank of 83 out of 2706 in a DataSciense Comeptetion Hosted by <a  style="color: rgb(193,244,123);" href="https://www.drivendata.org/competitions/54/machine-learning-with-a-heart/">DrivenData</a>
   <br><br>
 
-  You can Check my work here on my <a style="color: yellow" href="https://github.com/Bro123456">github</a>
+  You can Check my work here on my <a style="color: rgb(193,244,123)" href="https://github.com/Amine-Zitoun">github</a>
 
  </p>
 
